# Japanese-Learning

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  japanese-learning.code-workspace  pyproject.toml  requirements.txt  retrospective.md
.claude/: settings.local.json
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 20260127_0001_initial.py  20260129_0002_add_document_is_deleted.py  20260129_0003_add_api_usage_logs_table.py  20260129_0004_add_user_profiles.py  20260129_0005_migrate_mode_balanced_to_free.py  20260130_0311_add_practice_sessions_and_user_states.py  20260130_0400_add_practice_logs_is_deleted.py  20260202_0001_add_target_lang_to_user_profiles.py  20260204_0001_add_pending_save_to_user_states.py  20260207_0001_add_pending_delete_to_user_states.py  20260210_0001_add_is_deleted_to_user_states.py  20260211_0001_add_is_deleted_to_user_profiles.py  20260211_0002_remove_is_fallback_from_api_usage_logs.py  20260220_0001_add_is_deleted_to_api_usage_logs.py  20260220_0002_align_fk_ondelete_to_restrict.py  20260304_0001_p2_schema_improvements.py  20260305_0646_add_article_mode_columns_to_user_states.py  20260412_0001_add_input_type_to_user_profiles.py
docs/: deployment.md  developer-feature-command-guide.md  discover.md  edge-cases.md  linebot_api_usage_footer_policy_v1.md  linebot_jp_learning_spec_mvp_v1.md
scripts/: wait_for_db.py
specs/001-line-jp-learning/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
src/: __init__.py  config.py  database.py  main.py
src/api/: middleware.py  webhook.py
src/lib/: __init__.py  line_client.py  llm_client.py  normalizer.py  security.py
src/models/: __init__.py  api_usage_log.py  document.py  item.py  practice_log.py  practice_session.py  raw_message.py  user_profile.py  user_state.py
src/prompts/: __init__.py  article.py  extractor.py  grader.py  router.py  word_explanation.py
src/repositories/: __init__.py  api_usage_log_repo.py  base.py  document_repo.py  item_repo.py  practice_log_repo.py  practice_session_repo.py  raw_message_repo.py  user_profile_repo.py  user_state_repo.py
src/schemas/: command.py  extractor.py  practice.py  router.py
src/services/: command_service.py  cost_service.py  delete_service.py  extractor_service.py  practice_service.py  router_service.py  session_service.py  stats_service.py
tests/: conftest.py
(+45 files in other folders)
